[package]
name = "zkLWE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "0.2.2"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
anyhow = "1.0"
rand = "0.8"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lwe_decrypt"
path = "src/bin/lwe_decrypt.rs"